--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${URL:localhost:13306}/torimo
-spring.datasource.username=${USER:torimo}
-spring.datasource.password=${PASSWORD:torimo}
+spring.datasource.url=jdbc:mysql://${DB_URL:localhost:13306}/torimo
+spring.datasource.username=${DB_USER:torimo}
+spring.datasource.password=${DB_PASSWORD:torimo}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=MYSQL
 
