--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# spring data sources
 spring.datasource.url=jdbc:mysql://${DB_URL:localhost:13306}/torimo
 spring.datasource.username=${DB_USER:torimo}
 spring.datasource.password=${DB_PASSWORD:torimo}
@@ -6,3 +7,7 @@ spring.jpa.database=MYSQL
 
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
+
+# api client
+api.client.check=https://api.zipaddress.net/
+api.article.post=${ARTICLE_POST_URL:http://localhost:8888}/
